--- a/EmailProject/bin/application/View/MainView.fxml
+++ b/EmailProject/bin/application/View/MainView.fxml
@@ -20,6 +20,7 @@
       <ToolBar prefHeight="52.0" prefWidth="800.0" BorderPane.alignment="CENTER">
         <items>
           <Button mnemonicParsing="false" onAction="#newMessageWindow" text="Write a new message" />
+            <Button alignment="CENTER_RIGHT" contentDisplay="TOP" lineSpacing="60.0" mnemonicParsing="false" onAction="#onCloseAction" text="Logout and close" />
         </items>
       </ToolBar>
    </top>
@@ -50,7 +51,7 @@
                      <children>
                         <ScrollPane style="-fx-background-color: white;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
                            <content>
-                              <TextArea fx:id="mailPreview" prefHeight="256.0" prefWidth="790.0" promptText="Content" style="-fx-background-color: white;" text="Content">
+                              <TextArea fx:id="mailPreview" prefHeight="256.0" prefWidth="790.0" promptText="Content" style="-fx-background-color: white;">
                                  <font>
                                     <Font size="14.0" />
                                  </font></TextArea>
